<resources>
    <string name="app_name">AI Lab 语音能力demo</string>
    <string name="au_section_name">音频理解</string>
    <string name="asr_name">语音识别</string>
    <string name="bigasr_name">大模型语音识别</string>
    <string name="vad_name">端点检测</string>
    <string name="asr_online_name">在线语音识别</string>
    <string name="asr_offline_name">离线语音识别</string>
    <string name="bv_section_name">语音合成</string>
    <string name="tts_name">语音合成</string>
    <string name="tts_one_name">单次合成</string>
    <string name="tts_multi_name">连续合成</string>
    <string name="bi_tts_name">双向流式合成</string>
    <string name="uni_tts_name">单向流式合成</string>
    <string name="voiceclone_name">音色复刻</string>
    <string name="voiceconv_name">音色转换</string>
    <string name="kws_name">语音唤醒</string>
    <string name="vi_section_name">语音交互</string>
    <string name="fulllink_name">全链路</string>
    <string name="assistant_name">语音助手</string>
    <string name="dialog_name">对话交互</string>
    <string name="dialog_delegate_name">对话交互(自定义TTS)</string>
    <string name="ie_section_name">智能教育</string>
    <string name="capt_name">口语评估</string>
    <string name="afp_name">音频指纹</string>
    <string name="au_name">综合音频理解</string>
    <string name="test_section_name">测试专用</string>
    <string name="test_afp_name">音频指纹多实例测试</string>
    <string name="test_asr_offline_rtf_name">离线ASR RTF测试</string>
    <string name="test_asr_offline_last_packet_cost_name">离线ASR 尾包延迟测试</string>
    <string name="test_asr_stress_name">在线ASR压测</string>
    <string name="main_display_1">欢迎体验AI Lab语音能力，请点击对应模块开始体验</string>
    <string name="main_display_2">更多能力，敬请期待！</string>
    <string name="compression_rate_hint">[1,10]</string>
    <string name="complexity_hint">[1,10]</string>
    <string name="asr_input_hint">点击或按住说话后，展示语音识别结果</string>
    <string name="capt_input_refer_text_hint">输入一段想评测的英文，朗读文本并获得评分</string>
    <string name="capt_input_difficulty_hint">Support 1, 2, 3</string>
    <string name="thread_priority_hint">Support [-20, 19]</string>
    <string name="fulllink_input_hint">用“大力大力”唤醒，并说出任意内容</string>
    <string name="dialog_hello_text">我是你的AI助手，请问有什么可以帮你。</string>
    <string name="dialog_chat_text_query_text">1+1等于几</string>
    <string name="tts_input_hint">输入想合成的文本后，点击收听合成结果</string>
    <string name="kws_input_hint">点击或按住说话后，命中唤醒词后展示唤醒结果</string>
    <string name="hotwords_input_hint">输入热词配置，点击UpdateHotwords后，查看识别效果变化</string>
    <string name="hotwords_input_sample">{\"dialog\":{\"data\":[{\"speaker\":\"bot\",\"text\":\"请描述您想要咨询的商品，如手机、背包等\"},{\"speaker\":\"user\",\"text\":\"衣服\"},{\"speaker\":\"bot\",\"text\":\"请问您想咨询的是哪种商品呢：短外套,卫衣/绒衫,衬衫\"}]}}</string>
    <string name="capt_pause_timeout_hint">60000</string>
    <string name="capt_silence_threshold_hint">10000</string>
    <string name="voiceconv_input_hint">StartEngine后说话，说话完成后点击FinishTalking结束</string>
    <string name="vad_input_hint">点击或按住说话后，展示语音活性检测结果</string>
    <string name="au_input_hint">点击或按住说话后，展示音频理解结果</string>
    <string name="start_stress_title">开始压测</string>
    <string name="stop_stress_title">结束压测</string>
    <string name="choose_engine_title">Choose Engine: </string>
    <string name="config_engine_title">Settings</string>
    <string name="disable_signal_title">Disable Signal</string>
    <string name="init_engine_title">Init Engine</string>
    <string name="uninit_engine_title">Uninit Engine</string>
    <string name="create_connection_title">Create Connection</string>
    <string name="start_engine_title">Start Engine</string>
    <string name="stop_engine_title">Stop Engine</string>
    <string name="start_dialog_title">Start Dialog</string>
    <string name="stop_dialog_title">Stop Dialog</string>
    <string name="pause_talking_title">Pause Talking</string>
    <string name="resume_talking_title">Resume Talking</string>
    <string name="finish_talking_title">Finish Talking</string>
    <string name="update_hotwords_title">Update Hotwords</string>
    <string name="force_wakeup_title">Force Wakeup</string>
    <string name="update_wakeup_words_title">Update Wakeup Words</string>
    <string name="long_press_title">Long Press</string>
    <string name="fetch_result_title">Fetch Result</string>
    <string name="pressure_test_title">Pressure Test</string>
    <string name="synthesis_title">Synthesis</string>
    <string name="playback_rate_title">x1.0</string>
    <string name="pause_title">Pause</string>
    <string name="resume_title">Resume</string>
    <string name="start_play_title">Start Play</string>
    <string name="get_task_title">Get Task</string>
    <string name="check_env_title">Check Env</string>
    <string name="voice_record_title">Voice Record</string>
    <string name="get_train_status_title">Get Train Status</string>
    <string name="submit_task_title">Submit Task</string>
    <string name="del_train_data_title">Del Train Data</string>
    <string name="next_record_task">Next Record Task</string>
    <string name="play_last_result_title">Play Last Result</string>
    <string name="chat_tts_text_title">ChatTtsText</string>
    <string name="chat_tts_text_auto_title">ChatTtsTextAuto</string>
    <string name="chat_text_query">ChatTextQuery</string>
    <string name="no_hint"></string>
    <string name="hint_unsupport_engine">Engine unsupported!</string>
    <string name="hint_engine_busy">Engine is busy, stop it first!</string>
    <string name="hint_network_failure">Network unreachable!</string>
    <string name="hint_check_environment">Please check recorder environment!</string>
    <string name="hint_waiting_init">Waiting for init.</string>
    <string name="hint_ready">Ready</string>
    <string name="hint_setup_failure">Fail to setup engine!</string>
    <string name="hint_engine_not_init">Engine not initiated!</string>
    <string name="hint_engine_uninited">Engine Engine uninited!</string>
    <string name="hint_start_cb">Engine Started!</string>
    <string name="hint_stop_cb">Engine Stopped!</string>
    <string name="hint_dialog_start_cb">Dialog started!</string>
    <string name="hint_dialog_init_cb">Dialog inited!</string>
    <string name="hint_dialog_join_cb">Dialog joined!</string>
    <string name="hint_dialog_stop_cb">Dialog stopped!</string>
    <string name="tpl_error_message">Error occurs, message[%s]</string>
    <string name="common_setting_title">Common</string>
    <string name="app_id_setting_hint">Set app id here</string>
    <string name="token_setting_hint">Set token here</string>
    <string name="cluster_setting_hint">Set cluster here</string>
    <string name="resourceid_setting_hint">Set resource id here</string>
    <string name="cluster_setting_title">Cluster:</string>
    <string name="backend_cluster_setting_hint">Set backend cluster here</string>
    <string name="address_setting_hint">Set address here</string>
    <string name="address_setting_title">Address:</string>
    <string name="uri_setting_hint">Set uri here</string>
    <string name="asr_language_hint">Set languages here</string>
    <string name="asr_hotwords_hint">Set hotwords here</string>
    <string name="asr_req_params_hint">Set req params json string here</string>
    <string name="asr_correct_words_hint">Set correct words here</string>
    <string name="tts_model_name_setting_hint">Set Tts model name here</string>
    <string name="voice_online_setting_hint">Set online voice here</string>
    <string name="voice_type_online_setting_hint">Set online voice type here</string>
    <string name="voice_offline_setting_hint">Set offline voice here</string>
    <string name="voice_type_offline_setting_hint">Set offline voice type here</string>
    <string name="tts_language_online_setting_hint">Set tts online language here</string>
    <string name="tts_language_offline_setting_hint">Set tts offline language here</string>
    <string name="tts_emotion_hint">Set tts emotion here</string>
    <string name="authenticate_credential_setting_hint">Set authenticate credential here</string>
    <string name="business_key_setting_hint">Set business key here</string>
    <string name="authenticate_secret_setting_hint">Set authenticate secret here</string>
    <string name="get_volume_title">Volume Level</string>
    <string name="disable_recorder_reuse_title">Disable recorder reuse</string>
    <string name="recorder_setting_title">Recorder</string>
    <string name="recorder_type_title">Recorder Type</string>
    <string name="file_or_directory_name_title">File/Directory name</string>
    <string name="vbr_title">No variable bitrate</string>
    <string name="au_setting_title">AU</string>
    <string name="asr_setting_title">ASR</string>
    <string name="capt_setting_title">CAPT</string>
    <string name="kws_setting_title">KWS</string>
    <string name="rec_save_title">Recorder Save</string>
    <string name="capt_core_type_title">Core type</string>
    <string name="offline_title">Enable Offline</string>
    <string name="response_mode_title">Enable Streaming</string>
    <string name="core_type_title">Core Type</string>
    <string name="en_sent_score_title">English sentence score</string>
    <string name="en_word_score_title">English word score</string>
    <string name="en_word_pron_title">English word pronounce</string>
    <string name="cn_sent_raw_title">Chinese sentence raw</string>
    <string name="disable_grammar_threshold_title">Disable grammar threshold</string>
    <string name="fulllink_setting_title">FULLLINK</string>
    <string name="fulllink_engine_type">Fulllink Engine Type</string>
    <string name="wakeup_words">Wakeup Words</string>
    <string name="wakeup_mode">Wakeup Mode</string>
    <string name="config_kws_work_mode">work mode</string>
    <string name="rec_dump_title">Recorder Dump</string>
    <string name="kws_dump_title">Kws Dump</string>
    <string name="only_asr_title">Only ASR</string>
    <string name="disable_tts_title">Disable TTS</string>
    <string name="upload_rawdata_title">Upload RawData</string>
    <string name="device_type_title">Device type</string>
    <string name="signal_thread_priority_title">SigThread Pri</string>
    <string name="tts_setting_title">TTS</string>
    <string name="tts_work_mode">Tts Work Mode</string>
    <string name="authentication_type">Authentication Type</string>
    <string name="disable_player_title">Disable Player</string>
    <string name="enable_dump_title">Enable Dump</string>
    <string name="enable_progress_title">Enable Progress</string>
    <string name="concurrency_setting_title">Concurrency</string>
    <string name="tts_scenario_type_title">TTS Scenario Type</string>
    <string name="tts_offline_resource_format_title">TTS Offline Model Format</string>
    <string name="enable_concurrency">Enable Concurrency</string>
    <string name="enable_cache">Enable Cache</string>
    <string name="tts_limit_cpu_usage">Tts limit cpu usage</string>
    <string name="tts_speak_speed">Tts Speak Speed</string>
    <string name="tts_audio_volume">Tts Audio Volume</string>
    <string name="tts_default_text">愿中国青年都摆脱冷气，只是向上走，不必听自暴自弃者流的话。能做事的做事，能发声的发声。有一分热，发一分光。就令萤火一般，也可以在黑暗里发一点光，不必等候炬火。此后如竟没有炬火：我便是唯一的光。</string>
    <string name="tts_text_type_title">Tts Text Type</string>
    <string name="tts_work_mode_title">Tts Work Mode</string>
    <string name="use_voiceclone">Use VoiceClone Voice</string>
    <string name="tts_speak_speed_hint">Input Integer for speed, such as 1.0</string>
    <string name="tts_silence_duration_hint">Input Integer for silence duration, such as 100.</string>
    <string name="tts_audio_volume_hint">Input Integer for volume, such as 10.</string>
    <string name="tts_audio_pitch_hint">Input Integer for pitch, such as 10.</string>
    <string name="tts_sample_rate_hint">Input sample rate of tts audio, such as 16000.</string>
    <string name="audio_fadeout_duration_hint">Input fadeout duration of player, use 0 when disable fadeout.</string>
    <string name="player_stream_type_hint">Input stream type of SDK player.</string>
</resources>