<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceCloneActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/refer_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:autofillHints=""
                android:background="@android:color/background_light"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="top"
                android:inputType="textMultiLine|text"
                android:textSize="15sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:gravity="bottom|center"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:textIsSelectable="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/engine_status"
                style="@android:style/Widget.DeviceDefault.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/hint_waiting_init"
                android:textAllCaps="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/engine_switch"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/init_engine_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/get_task_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/get_task_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/check_env_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/check_env_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/voice_record_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/voice_record_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/finish_talking_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/finish_talking_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/get_train_status_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/get_train_status_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit_task_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/submit_task_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/del_train_data_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/del_train_data_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/next_record_task"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_active_background"
                    android:text="@string/next_record_task"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/engine_config"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_setting_background"
                    android:drawableEnd="@mipmap/settings"
                    android:drawableRight="@mipmap/settings"
                    android:text="@string/config_engine_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>